# numberpartitioning

./: .gitignore  CHANGELOG.md  README.md  requirements.txt  setup.cfg
.github/workflows/: publish.yml  test.yml
demos/: approximate_algorithms.py  approximations.py  complete.py  complete_algorithms.py  ilp.py
src/numberpartitioning/: __init__.py  common.py  complete_karmarkar_karp.py  greedy.py  ilp.py  karmarkar_karp.py  solve.py
tests/: test_complete_karmarkar_karp.py  test_complete_karmarker_karp.py  test_greedy.py  test_ilp.py  test_karmarkar_karp.py
