[metadata]
name = numberpartitioning
version = attr: numberpartitioning.__version__
author = Søren Fuglede Jørgensen
author_email = pypi@fuglede.dk
description = Pure Python solver for the multi-way partition problem
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fuglede/numberpartitioning
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7

[options.packages.find]
where = src

[flake8]
max-line-length = 88

[mypy]
ignore_missing_imports = True
